Resolve #110 - Fix centering on mobile

--- a/layouts/partials/css/page.css
+++ b/layouts/partials/css/page.css
@@ -232,7 +232,6 @@ footer a {
 
 #social-icons {
   font-size: 1.5rem;
-  flex-direction: row-reverse;
 }
 
 #social-icons a:link,
